--- a/src/pages/start/Start.css
+++ b/src/pages/start/Start.css
@@ -1,4 +1,4 @@
-#overlay {
+#start-overlay {
     position: fixed;
     width: 100%;
     height: 100%;
@@ -14,7 +14,7 @@
     opacity: 0;
 }
 
-#overlay.active {
+#start-overlay.active {
     opacity: 1;
     visibility: visible;
     backdrop-filter: blur(8px);
